# KEXP-WebComponent

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  playwright.config.js  vite.config.js  vite.extension.config.js  vite.tauri.config.js
.github/workflows/: keepalive.yml  node.js.yml
docs/: store-listing.md
extension/: backendConfig.js  background-ff.html  background-ff.js  manifest.firefox.json  offscreen.html  offscreen.js  popup.html  popup.js
extension/public/: background.js  content-sync.js  manifest.json
playwright-report/: index.html
scripts/: gen-store-screenshots.mjs
src/: albumArt.js  audioPlayer.js  enrich.js  global.css  index.html  likesBackend.js  musicbrainz.js  playerEngine.js  spotify.js  tauri.html  wikipedia.js
src-tauri/: Cargo.toml  gen-tray-icons.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/privacy/: index.html
supabase/: config.toml
supabase/functions/enrich/: index.ts
supabase/migrations/: 20260606000001_likes.sql  20260607000002_playlist_position.sql
test-results/: .last-run.json
tests/: audioPlayer.spec.js  verify-extension-adoption.mjs
