[package]
name = "kexp-menubar"
version = "0.1.0"
description = "KEXP 90.3 FM menu-bar player"
authors = ["David Puerto"]
license = ""
repository = "https://github.com/dapinitial/KEXP-WebComponent"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
